// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process Tasks copyFiles Fails to copy file: File glob 1`] = `
Object {
  "dirent": DirentFromStats {
    "isBlockDevice": [Function],
    "isCharacterDevice": [Function],
    "isDirectory": [Function],
    "isFIFO": [Function],
    "isFile": [Function],
    "isSocket": [Function],
    "isSymbolicLink": [Function],
    "name": "file.txt",
  },
  "name": "file.txt",
  "path": "file.txt",
  "stats": Stats {
    "atime": 1970-01-01T00:00:00.000Z,
    "atimeMs": 0,
    "birthtime": 1970-01-01T00:00:00.000Z,
    "birthtimeMs": 0,
    "blksize": undefined,
    "blocks": undefined,
    "ctime": 1970-01-01T00:00:00.000Z,
    "ctimeMs": 0,
    "dev": 8675309,
    "gid": NaN,
    "ino": 60,
    "mode": 32768,
    "mtime": 1970-01-01T00:00:00.000Z,
    "mtimeMs": 0,
    "nlink": 1,
    "rdev": 0,
    "size": 9,
    "uid": NaN,
  },
}
`;

exports[`Process Tasks copyFiles Fails to create dist folder: File glob 1`] = `
Object {
  "dirent": DirentFromStats {
    "isBlockDevice": [Function],
    "isCharacterDevice": [Function],
    "isDirectory": [Function],
    "isFIFO": [Function],
    "isFile": [Function],
    "isSocket": [Function],
    "isSymbolicLink": [Function],
    "name": "file.txt",
  },
  "name": "file.txt",
  "path": "file.txt",
  "stats": Stats {
    "atime": 1970-01-01T00:00:00.000Z,
    "atimeMs": 0,
    "birthtime": 1970-01-01T00:00:00.000Z,
    "birthtimeMs": 0,
    "blksize": undefined,
    "blocks": undefined,
    "ctime": 1970-01-01T00:00:00.000Z,
    "ctimeMs": 0,
    "dev": 8675309,
    "gid": NaN,
    "ino": 47,
    "mode": 33206,
    "mtime": 1970-01-01T00:00:00.000Z,
    "mtimeMs": 0,
    "nlink": 1,
    "rdev": 0,
    "size": 9,
    "uid": NaN,
  },
}
`;
